# JUCE-Subnite-Template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  flake.nix  shell.nix
Dependencies/: CMakeLists.txt
Dependencies/Subnite/: CMakeLists.txt
Dependencies/Subnite/Commons/: Utils.cpp  Utils.h  ValueTreeManager.h
Dependencies/Subnite/DSP/: DelayedBuffer.cpp  DelayedBuffer.h  Delta.h  Interpolation.hpp
Dependencies/Subnite/GUI/: CustomSliders.cpp  CustomSliders.h  Themes.cpp  Themes.h
Dependencies/dyn_lib/: CMakeLists.txt
Dependencies/dyn_lib/src/private/: TObserver.h  TParameter.cpp  TParameter.h  aura-params.cpp  aura-params.h  juce-init.cpp  juce_init.cpp  observer_t.h  parameter_t.cpp  parameter_t.h  plugin.cpp
Dependencies/dyn_lib/src/public/: common.h  juce-init.h  juce_init.h  plugin.h
Dependencies/subnite_extras/common/: ring_buffer.hpp  utils.cpp  utils.h  value_tree_manager.h
Dependencies/subnite_extras/dsp/: delayed_buffer.cpp  interpolation.hpp
Dependencies/subnite_extras/gui/: custom_sliders.cpp  custom_sliders.h  themes.cpp
Source/: CMakeLists.txt
Source/Commons/: PluginValueTree.h
Source/DSP/: PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: PluginEditor.cpp  PluginEditor.h
Source/Rust/: Cargo.toml  build.rs
Source/Rust/src/: lib.rs
