collect_cpp_files(SUBNITE_DYNLIB_SOURCE_FILES)

add_library(${PLUGIN_DYNAMIC_LIB_NAME} SHARED
    ${SUBNITE_DYNLIB_SOURCE_FILES}
)

add_dependencies(${PLUGIN_DYNAMIC_LIB_NAME} ${PLUGIN_STATIC_LIB_NAME})

target_include_directories(${PLUGIN_DYNAMIC_LIB_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src/private
    ${CMAKE_CURRENT_SOURCE_DIR}/src/public
    # for the plugin
    ${CMAKE_SOURCE_DIR}/Source
    ${CMAKE_SOURCE_DIR}/Dependencies/
    # JUCE itself
    ${JUCE_MODULES_PATH}
)

target_link_libraries(${PLUGIN_DYNAMIC_LIB_NAME} PRIVATE
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,${PLUGIN_STATIC_LIB_NAME}>"
)

target_compile_definitions(${PLUGIN_DYNAMIC_LIB_NAME} PRIVATE
    SOURCE_EXPORT_SHARED_LIB=1
    JUCE_GLOBAL_MODULE_SETTINGS_INCLUDED=1
    JUCE_MODAL_LOOPS_PERMITTED=1
)
